--- a/public/main.css
+++ b/public/main.css
@@ -1,11 +1,15 @@
 body {
-    background-color: rgb(235, 238, 227);
+    background-color: rgb(248, 248, 248);
   }
   
   img {
     width: 50%;
     display: block;
     margin: auto;
+  }
+
+  h1{
+    color: black;
   }
   
   
